--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
-  "name": "wap-web_audio_player",
-  "version": "0.0.1",
-  "description": "WAP - audio player on web technologys",
-  "keywords": [
-    "web",
-    "audio",
-    "player"
-  ],
-  "author": "Iurii Kornienko",
-  "license": "MIT",
-  "main": "",
-  "scripts": {},
-  "devDependencies": {
-    "gulp": "^4.0.0",
-    "gulp-pug": "^3.3.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-typescript": "^3.2.3",
-    "typescript": "^2.6.2"
+  "name": "y",
+  "description": "WAP - web audio player",
+  "version": "1.0.0",
+  "author": "y",
+  "license": "y",
+  "private": true,
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
-  "dependencies": {}
+  "dependencies": {
+    "vue": "^2.5.11"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.4",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "vue-loader": "^13.0.5",
+    "vue-template-compiler": "^2.4.4",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
+  }
 }
